[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "newfile"
authors = [{name="Jef Wagner", email="jefwagner@gmail.com"}]
description = "Tool for creating new file with LGPL header"
readme = "readme.md"
keywords = ["foo"]
license = {text="LGPL-3.0-or-later"}
requires-python = ">=3.7"
dependencies = [
    "tomli",
    "click"
]
dynamic = ["version"]

[tool.setuptools]
license-files = ["copying*"]

[tool.setuptools.dynamic]
version = {attr = "newfile.VERSION"}

[project.scripts]
newfile = "newfile:main"
